objects/Country_Value_Map__c.object
<CustomObject>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>CountryCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name_In__c</fullName>
        <label>CountryName_In</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name_Out__c</fullName>
        <label>CountryName_Out</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Country Value Map</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Country_values</fullName>
        <columns>Country_Code__c</columns>
        <columns>Country_Name_In__c</columns>
        <columns>Country_Name_Out__c</columns>
        <filterScope>Everything</filterScope>
        <label>Country values</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Country Value Map Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Country Value Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>